# Lidar_based_pothhole-detection

./: README.md
catkin_ws/src/velodyne/velodyne_pointcloud/: CMakeLists.txt
catkin_ws/src/velodyne/velodyne_pointcloud/src/: path_hole_detection.cpp  plane_fitting.cpp  plane_fitting_combined.cpp  test.cpp  test_2.cpp  zmax_properties.cpp
